--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+
+.input {
+  @apply w-full h-12 px-4 text-lg border rounded-md bg-gray-50
+  focus:outline-none focus:ring-2 focus:ring-blue-400 transition placeholder-gray-400;
+}
