--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,11 @@
   @apply w-full h-12 px-4 text-lg border rounded-md bg-gray-50
   focus:outline-none focus:ring-2 focus:ring-blue-400 transition placeholder-gray-400;
 }
+
+body {
+  overflow: hidden; /* body 스크롤 차단 */
+}
+* {
+  margin: 0;
+  padding: 0;
+}
